mudar o nome do metodos limparMatricula - BASIS-219718

--- a/frontend/src/app/seguranca/components/vinculos/vinculos.component.html
+++ b/frontend/src/app/seguranca/components/vinculos/vinculos.component.html
@@ -97,7 +97,7 @@
                                 formControlName="geraMatricula" 
                                 value="false" 
                                 required
-                                (click)="limpar()">
+                                (click)="limparMatricula()">
                             </p-radioButton>
                             <label class="label-radioButton">Não</label>
                         </div>
