tornar label clicavel ao radioButton correspondente - BASIS-219718

--- a/frontend/src/app/seguranca/components/vinculos/vinculos.component.html
+++ b/frontend/src/app/seguranca/components/vinculos/vinculos.component.html
@@ -49,18 +49,18 @@
                             <p-radioButton 
                                 name="infDependente" 
                                 formControlName="infDependente" 
-                                value="true">
+                                value="true"
+                                label="Sim">
                             </p-radioButton>
-                            <label class="label-radioButton">Sim</label>
                         </div>
                         <div class="radioButton">
                             <p-radioButton
                                 name="infDependente" 
                                 formControlName="infDependente" 
-                                value="false" 
+                                value="false"
+                                label="Não" 
                                 required>
                             </p-radioButton>
-                            <label class="label-radioButton">Não</label>
                         </div>
                     </div>
                 </div>
@@ -72,18 +72,18 @@
                             <p-radioButton 
                                 name="exTermino" 
                                 formControlName="exTermino" 
-                                value="true">
+                                value="true"
+                                label="Sim">
                             </p-radioButton>
-                            <label class="label-radioButton">Sim</label>
                         </div>
                         <div class="radioButton">
                             <p-radioButton
                                 name="exTermino" 
                                 formControlName="exTermino" 
                                 value="false" 
+                                label="Não"
                                 required>
                             </p-radioButton>
-                            <label class="label-radioButton">Não</label>
                         </div>
                     </div>
                 </div>
@@ -95,9 +95,9 @@
                             <p-radioButton 
                                 name="geraMatricula" 
                                 formControlName="geraMatricula" 
-                                value="true">
+                                value="true"
+                                label="Sim">
                             </p-radioButton>
-                            <label class="label-radioButton">Sim</label>
                         </div>
                         <div class="radioButton">
                             <p-radioButton
@@ -105,9 +105,9 @@
                                 formControlName="geraMatricula" 
                                 value="false" 
                                 required
+                                label="Não"
                                 (click)="limparMatricula()">
                             </p-radioButton>
-                            <label class="label-radioButton">Não</label>
                         </div>
                     </div>
                 </div>
@@ -131,18 +131,18 @@
                             <p-radioButton 
                                 name="exCentroAtividade" 
                                 formControlName="exCentroAtividade" 
-                                value="true">
+                                value="true"
+                                label=Sim>
                             </p-radioButton>
-                            <label class="label-radioButton">Sim</label>
                         </div>
                         <div class="radioButton">
                             <p-radioButton
                                 name="exCentroAtividade" 
                                 formControlName="exCentroAtividade" 
                                 value="false" 
+                                label="Não"
                                 required>
                             </p-radioButton>
-                            <label class="label-radioButton">Não</label>
                         </div>
                     </div>
                 </div>
@@ -154,18 +154,18 @@
                             <p-radioButton 
                                 name="exOcupacao" 
                                 formControlName="exOcupacao" 
-                                value="true">
+                                value="true"
+                                label="Sim">
                             </p-radioButton>
-                            <label class="label-radioButton">Sim</label>
                         </div>
                         <div class="radioButton">
                             <p-radioButton
                                 name="exOcupacao" 
                                 formControlName="exOcupacao" 
                                 value="false" 
+                                label="Não"
                                 required>
                             </p-radioButton>
-                            <label class="label-radioButton">Não</label>
                         </div>
                     </div>
                 </div>
@@ -177,18 +177,18 @@
                             <p-radioButton 
                                 name="transfereStarh" 
                                 formControlName="transfereStarh" 
-                                value="true">
+                                value="true"
+                                label="Sim">
                             </p-radioButton>
-                            <label class="label-radioButton">Sim</label>
                         </div>
                         <div class="radioButton">
                             <p-radioButton
                                 name="transfereStarh" 
                                 formControlName="transfereStarh" 
                                 value="false" 
+                                label="Não"
                                 required>
                             </p-radioButton>
-                            <label class="label-radioButton">Não</label>
                         </div>
                     </div>
                 </div>            
@@ -202,18 +202,18 @@
                             <p-radioButton 
                                 name="permiteDuplos" 
                                 formControlName="permiteDuplos" 
-                                value="true">
+                                value="true"
+                                label="Sim">
                             </p-radioButton>
-                            <label class="label-radioButton">Sim</label>
                         </div>
                         <div class="radioButton">
                             <p-radioButton
                                 name="permiteDuplos" 
                                 formControlName="permiteDuplos" 
-                                value="false" 
+                                value="false"
+                                label="Não" 
                                 required>
                             </p-radioButton>
-                            <label class="label-radioButton">Não</label>
                         </div>
                     </div>
                 </div>
@@ -225,18 +225,18 @@
                             <p-radioButton 
                                 name="exCpfRg" 
                                 formControlName="exCpfRg" 
-                                value="true">
+                                value="true"
+                                label="Sim">
                             </p-radioButton>
-                            <label class="label-radioButton">Sim</label>
                         </div>
                         <div class="radioButton">
                             <p-radioButton
                                 name="exCpfRg" 
                                 formControlName="exCpfRg" 
                                 value="false" 
+                                label="Não"
                                 required>
                             </p-radioButton>
-                            <label class="label-radioButton">Não</label>
                         </div>
                     </div>
                 </div>
@@ -248,18 +248,18 @@
                             <p-radioButton 
                                 name="gestapDesempenho" 
                                 formControlName="gestapDesempenho" 
-                                value="true">
+                                value="true"
+                                label="Sim">
                             </p-radioButton>
-                            <label class="label-radioButton">Sim</label>
                         </div>
                         <div class="radioButton">
                             <p-radioButton
                                 name="gestapDesempenho" 
                                 formControlName="gestapDesempenho" 
-                                value="false" 
+                                value="false"
+                                label="Não" 
                                 required>
                             </p-radioButton>
-                            <label class="label-radioButton">Não</label>
                         </div>
                     </div>
                 </div>
@@ -271,18 +271,18 @@
                             <p-radioButton 
                                 name="emiteContrato" 
                                 formControlName="emiteContrato" 
-                                value="true">
+                                value="true"
+                                label=Sim>
                             </p-radioButton>
-                            <label class="label-radioButton">Sim</label>
                         </div>
                         <div class="radioButton">
                             <p-radioButton
                                 name="emiteContrato" 
                                 formControlName="emiteContrato" 
-                                value="false" 
+                                value="false"
+                                label="Não" 
                                 required>
                             </p-radioButton>
-                            <label class="label-radioButton">Não</label>
                         </div>
                     </div>
                 </div>
