--- a/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
+++ b/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
@@ -66,7 +66,7 @@
                 <div class="p-md-2 p-sm-12">
                     <span class="p-float-label">
                         <p-calendar [locale]="localizacao" 
-                            dateFormat="dd-mm-yy" 
+                            dateFormat="dd/mm/yy" 
                             formControlName="dataFinal"
                             [(ngModel)]="data">
                         </p-calendar>
